--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <header class="without-description">
-        <h1>Randyxiaomin.GitHub.io</h1>
+        <h1>胡骁旻</h1>
         <p></p>
         <p class="view"><a href="https://github.com/RandyXiaomin">View the Project on GitHub <small>RandyXiaomin</small></a></p>
         <ul>
